# DelegateUI-Colors

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  DelColorPicker.qml  Example.qml  main.cpp
src/: CMakeLists.txt  delcolorgenerate.cpp  delcolorgenerate.h  delcolorgenerator.cpp  delcolorgenerator.h
